# Pim-ADS-1

./: .gitignore  CMakeLists.txt  Carro.h  CarroMetodos.c  CarrosDisponiveis.h  CarrosMetodos.h  Cliente.h  ClienteMetodos.c  ClienteMetodos.h  Interface.c  README.md  _globals.h  carrosDisponiveis.txt  clientesReg.txt  data.h  main.c  utils.h
Arquivos/: carrosDisponiveis.txt  clientesReg.txt
Arquivos/en.lproj/: clientesReg.txt
Header/: Carro.h  Cliente.h  H_CarroMetodos.h  H_ClienteMetodos.h  H_Interface.h
Utils/: _globals.h  data.h  utils.h
